# learn-terraform

./: README.md
gcp-terraform-tutorial/: README.md  main.tf
learn-terraform-docker-container/: main.tf
learn-terraform-gcp/: main.tf  variables.tf
terraform-gke/: pyproject.toml
terraform-gke/terraform/: gke.tf  providers.tf  variables.tf
tutorials/: infrastructure-as-code.md
